--- a/login-screen/src/App.css
+++ b/login-screen/src/App.css
@@ -10,6 +10,20 @@ img{
 }
 
 body{
+  
   width: 100%;
   height: 100vh;
+}
+
+.mainContent{
+  padding-top: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: tomato;
+}
+
+.mainContent h1{
+  font-size: 32px;
+  font-weight: 500;
 }
