--- a/login-screen/src/components/Header.module.css
+++ b/login-screen/src/components/Header.module.css
@@ -1,9 +1,24 @@
 header{
+
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 10px 20px  ;
 }
 
 .logoNike{
-    width: 500px;
+    width: 20%;
+}
+
+.btnHeader{ 
+    width: 80px;
+    height: 40px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    border: .2px solid gray;
+    font-weight: 600;
+    box-shadow: 2px 2px 5px 0px rgba(182,188,190,0.75);
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(182,188,190,0.75);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(182,188,190,0.75);
 }
